# hrm-rust

./: dump.js
backend/: Cargo.toml  dump.js  package-lock.json  package.json
backend/scripts/: q.py
backend/src/: attendance_logic.rs  bio_park_tcp.rs  biometric_events.rs  config.rs  leave_type_logic.rs  main.rs  payroll_logic.rs  routes.rs  salary_logic.rs  salary_split.rs  shift_logic.rs  statutory_logic.rs  storage.rs  workflow_logic.rs
backend/src/db/: migrations.rs
backend/src/handlers/: analytics.rs  attendance.rs  auth.rs  biometric.rs  careers.rs  centers.rs  designations.rs  holidays.rs  job_applications.rs  leave_requests.rs  leave_types.rs  mod.rs  payroll.rs  payslips.rs  projects.rs  reports.rs  roles.rs  salaries.rs  settings.rs  shifts.rs  tasks.rs  users.rs  workflows.rs
backend/src/middleware/: rbac.rs
backend/src/models/: attendance.rs  biometric.rs  designation.rs  holiday.rs  job_application.rs  mod.rs  payslip.rs  salary.rs  task.rs  user.rs  workflow.rs
database/: database.sqlite
deploy/: remote-git-setup.sh
frontend/: package-lock.json  package.json  vite.config.ts
frontend/scripts/: ui-input-flow-check.mjs  ui-nav-check.mjs
frontend/src/: main.tsx
frontend/src/components/: app-sidebar.tsx  ctc-salary-panel.tsx  permission-button.tsx  permission-guard.tsx  permission-route.tsx  salary-structure-panel.tsx  salary-tabs-panel.tsx  user-menu-content.tsx
frontend/src/contexts/: AuthContext.tsx
scripts/: api-input-flow-test.ps1  attendance-flow-test.ps1  deploy-production.ps1  flow-test.ps1  ui-nav-check.mjs
(+36 files in other folders)
