[package]
name = "hrm-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-multipart = "0.7"
actix-cors = "0.7"
actix-rt = "2"
actix-ws = "0.3"
futures-util = "0.3"

# Database — use compatible versions
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Auth
jsonwebtoken = "9"
bcrypt = "0.17"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "hostname", "smtp-transport"] }

[profile.dev.package."*"]
opt-level = 3
